scrollbar fix

--- a/web/src/index.scss
+++ b/web/src/index.scss
@@ -342,8 +342,8 @@ button:active {
   padding-right: 0.25rem;
 
   &::-webkit-scrollbar {
-    width: 1vh;
-    height: 1vh;
+    width: 0.8vh;
+    height: 0.8vh;
   }
 
   &::-webkit-scrollbar-thumb {
